targets/cb/_theme_assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "styles";


h1, h2, h3, h4, h5, h6, p, body {
  font-family: 'Asap', 'Open Sans', Arial, sans-serif !important;
}

 .narrow-heading {
 	padding: 100px 0  !important;
	@media only screen and (min-width: 768px) {
  		padding: 100px 0 !important;
	}
 }

.noheader {
  margin-bottom: 100px !important;
}

.noheadernav {
  a {
      color: #444 !important;
    }
}


header.masthead {
	background-color: transparent !important;
}

.canvas-wrapper {
	position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -1
}

/*
header.masthead {
  .overlay {
    background-color: transparent !important;
    xopacity: 0.8 !important;
  }
}
*/

